- Ability to screenshot the race result natively - Fixed width Name Column for Draft Overlay all Teams - Removed double border of Name Column for draft Overlay all Teams - Screenshot of Draft auto scales width to remove deadspace - Small fix when Starting pistol used multiple times

--- a/AkdTimerGV/wwwroot/Drafting.css
+++ b/AkdTimerGV/wwwroot/Drafting.css
@@ -5,10 +5,10 @@
 
 /*dropzone style style*/
 .plk-dd-dropzone {
-    width: 970px;
-    min-width: 960px;
+    width: 1045px;
+    min-width: 1045px;
     min-height: 64px;
-    display:flex;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
